--- a/docs/_layouts/_default.html
+++ b/docs/_layouts/_default.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    {% if site.google_analytics and jekyll.environment == 'production' %}
     {% include analytics.html %}
+    {% endif %}
   </head>
 </html>
