--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,6 +24,7 @@
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
+      <a2 id="banner_left"><img src="images/clearythumb.png"/></a2>
         <header class="inner">
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
 
