--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -44,3 +44,37 @@ p largeimg {
     width: 100%;
     height: auto;
 }
+
+#banner_left {
+  display: block;
+  position: absolute;
+  top:10px;
+  left: 10px;
+  z-index: 10;
+  padding: 0px 0px 0px 0px;
+  border: none;
+  color: #fff;
+  background: #ffffff;
+  font-weight: 700;
+  box-shadow: 0 0 10px rgba(0,0,0,.5); 
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
+/*  background: url('/images/clearythumb.png') #0090ff no-repeat 95% 50%; */
+
+a2 {
+  text-decoration: none;
+  color: #0F79D0;
+  text-shadow: none;
+
+  transition: color 0.5s ease;
+  transition: text-shadow 0.5s ease;
+  -webkit-transition: color 0.5s ease;
+  -webkit-transition: text-shadow 0.5s ease;
+  -moz-transition: color 0.5s ease;
+  -moz-transition: text-shadow 0.5s ease;
+  -o-transition: color 0.5s ease;
+  -o-transition: text-shadow 0.5s ease;
+  -ms-transition: color 0.5s ease;
+  -ms-transition: text-shadow 0.5s ease;
+}
