--- a/docs/_includes/image.html
+++ b/docs/_includes/image.html
@@ -4,8 +4,8 @@
     {% if include.url %}
     <a href="{{ include.url }}" title="{{ include.title }}" target="_blank">
     {% endif %}
-        <img src="{{ include.img }}" alt="{{ include.title }}" width="100%"/>
-<!--        <img src="{{ site.url }}/{{ include.img }}" alt="{{ include.title }}" width="100%"/> -->
+<!--        <img src="{{ include.img }}" alt="{{ include.title }}" width="100%"/> -->
+        <img src="{{ site.url }}/{{ include.img }}" alt="{{ include.title }}" width="100%"/> 
     {% if include.url %}
     </a>
     {% endif %}
